Add some HTML structure

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
+
+<!DOCTYPE html>
+<html>
+<head>
+<title></title>
+</head>
+<body>
 <h1>HELLO, WORLD</h1>
+<p>Call me AKSHATA RAO</p>
+<p>I am a Multimedia journalist. I am currently learning to code. JavaScript is my favourite language.</p>
+</body>
+</html>
 
